k8s/deployment_backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-realworld
  labels:
    app: realworld
    type: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: realworld
      type: backend
  template:
    metadata:
      labels:
        app: realworld
        type: backend
    spec:
      containers:
        - name: be-realworld
          image: lamboosan/hillel-backend:0.0.2
          ports:
          - containerPort: 8081
          imagePullPolicy: Always
