k8s/deployment_frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-realworld
  labels:
    app: realworld
    type: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: realworld
      type: frontend
  template:
    metadata:
      labels:
        app: realworld
        type: frontend
    spec:
      containers:
      - name: fe-realworld
        image: lamboosan/hillel-frontend:0.0.4
        ports:
        - containerPort: 4100
        imagePullPolicy: Always
