k8s/svc_backend.yml
apiVersion: v1
kind: Service
metadata:
  name: be-realworld
  labels:
    app: realworld
    type: backend
spec:
  selector:
    app: realworld
    type: backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
